--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "3.6.4",
     "date-fns": "2.10.0",
+    "js-cookie": "^3.0.5",
     "lodash": "4.17.15",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "sass": "^1.62.0",
-    "vue": "2.6.11",
+    "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-meta": "2.3.3",
     "vue-multiselect": "^2.1.7",
     "vue-router": "3.1.6",
+    "vue-uuid": "^3.0.0",
     "vue2-datepicker": "^3.11.1",
     "vuex": "3.1.2"
   },
